[package]
name = "gateslam"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
colored = "2.2.0"
mwbot = "0.6.1"
regex = "1.11.1"
reqwest = "0.12.9"
serde = { version = "1.0.216", features = ["serde_derive"] }
serde_json = "1.0.133"
tokio = { version = "1", features = ["full"] }

[features]
mediawiki = []
